# shopware-devenv

./: .gitignore  .onedev-buildspec.yml  Cargo.toml  LICENCE  PKGBUILD  README.head.md  README.md  config.nix  default.nix  devenv.local.nix  devenv.nix  flake.nix  options-readonly.md  options.md  rustfmt.toml  shopware-proxy.nix  update_modules.bash
.github/: dependabot.yml
.github/workflows/: ci.yml
shopware/: caddy.nix  default.nix  lib.nix  scripts.nix  ssl.nix
shopware/extras/: monolog.nix  mute-deprecations.nix  phpstorm-performance.nix  start-proxy.nix  vscode-workspace.nix  xdebug.nix
shopware/modules/: admin-watcher.nix  adminer.nix  blackfire.nix  cypress.nix  elasticsearch.nix  mailpit.nix  messenger.nix  mysql.nix  playwright.nix  rabbitmq.nix  redis.nix  store-watcher.nix  var-dump-server.nix  xdebug.nix
src/: app.rs  args.rs  cli.rs  config.rs  constants.rs  devenv.local.nix  devenv.rs  logger.rs  main.rs  utils.rs
src/context/: custom_context.rs  mod.rs  platform_context.rs
src/internal/: app.rs  config.rs  constants.rs  devenv.rs  exit_codes.rs  globals.rs  logger.rs  macros.rs  mod.rs  utils.rs
src/operations/: build.rs  check.rs  config.rs  console.rs  down.rs  dump_server.rs  init.rs  log.rs  mod.rs  plugin.rs  up.rs  update.rs  watch.rs
