[package]
name = "swde"
version = "1.0.1"
authors = ["cyl3x <cyl3x@posteo.de>"]
edition = "2021"
repository = "https://git.cyl3x.de/cyl3x/shopware-devenv"
description = "Wrapper for the Shopware devenv development environment"
license-file = "LICENSE"
readme = "README.md"
keywords = ["shopware", "devenv", "swde", "platform"]
categories = ["filesystem", "development-tools"]

[[bin]]
name = "swde"
path = "src/main.rs"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "debuginfo"

[dependencies]
clap = { version = "4.5.35", features = ["derive", "suggestions"] }
regex = { version = "1.11.1", default-features = false, features = ["std"] }
serde = { version = "1.0.219", default-features = false, features = ["serde_derive"] }
once_cell = { version = "1.21.3", default-features = false, features = ["std"] }
sysinfo = { version = "0.34.2", default-features = false, features = ["system"]}
sha2 = { version = "0.10.8", default-features = false }
libc = { version = "0.2.171", default-features = false }
colored = "3.0.0"
serde_json = "1.0.140"
clap_complete = "4.5.47"
dotenv-parser = "0.1.3"
rand = "0.9.0"
anyhow = "1.0.97"
color-eyre = "0.6.3"
